# manga-panels

./: .gitignore  CLAUDE.md  LICENSE  README.md  manga-panels.example.toml  pyproject.toml
docs/superpowers/plans/: 2026-07-15-manga-panel-splitter.md  2026-07-16-cli-flags-preview.md  2026-07-16-magi-ml-detector.md  2026-07-17-cli-distribution-polish.md
docs/superpowers/specs/: 2026-07-15-manga-panel-splitter-design.md  2026-07-16-cli-flags-preview-design.md  2026-07-16-magi-ml-detector-design.md  2026-07-17-cli-distribution-polish-design.md
src/manga_panels/: __init__.py  archive.py  browse.py  cli.py  config.py  debug.py  detect.py  errors.py  ml.py  order.py  pipeline.py  preview.py
tests/: conftest.py  test_archive.py  test_browse.py  test_config.py  test_debug.py  test_detect.py  test_ml.py  test_order.py  test_pipeline.py  test_preview.py  test_warmup.py
