[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manga-panels"
version = "0.3.0"
description = "Split manga pages into panels and repackage as CBZ"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pillow>=10",
    "numpy>=1.24",
    "rich>=13",
    "rich-argparse>=1.5",
    "torch>=2.3",
    "transformers>=4.40,<5",
    "einops",
    "matplotlib",
    "networkx",
    "pulp",
    "scipy",
    "shapely",
    "sentencepiece",
    "timm",
]

[project.optional-dependencies]
cbr = ["rarfile>=4"]
dev = ["pytest>=8"]

[project.scripts]
manga-panels = "manga_panels.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/manga_panels"]

[tool.pytest.ini_options]
markers = [
    "ml: integration test that needs the [ml] extra and downloads the Magi model (~1.5GB); not run by default",
]
addopts = "-m 'not ml' --strict-markers"
