[build-system]
requires = ["uv_build>=0.5,<0.11"]
build-backend = "uv_build"

[project]
name = "manga-panels"
version = "0.6.0"
description = "Split manga pages into panels and repackage as CBZ"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pillow>=10",
    "numpy>=1.24",
    "rich>=13",
    "rich-argparse>=1.5",
    "torch>=2.3",
    "transformers>=4.40,<5",
    "einops",
    "matplotlib",
    "networkx",
    "pulp",
    "scipy",
    "shapely",
    "sentencepiece",
    "timm",
]

[project.optional-dependencies]
cbr = ["rarfile>=4"]
pdf = ["img2pdf>=0.5"]
dev = ["pytest>=8"]

[project.scripts]
manga-panels = "manga_panels.cli:_entry"

[tool.pytest.ini_options]
markers = [
    "ml: integration test that needs the [ml] extra and downloads the Magi model (~1.5GB); not run by default",
]
addopts = "-m 'not ml' --strict-markers"
